src/tests/fixtures/field_definitions/ParameterPropertyFieldsNotPublic.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  constructor(
    /** @gqlField */
    private helloPrivate: string,
    /** @gqlField */
    protected helloProtected: string,
  ) {}
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ParameterPropertyFieldsNotPublic.invalid.ts:5:5 - error: Expected `@gqlField` parameter property to be public. Valid modifiers for `@gqlField` parameter properties are  `public` and `readonly`.

Learn more: https://grats.capt.dev/docs/docblock-tags/fields#class-based-fields

5     private helloPrivate: string,
      ~~~~~~~
src/tests/fixtures/field_definitions/ParameterPropertyFieldsNotPublic.invalid.ts:7:5 - error: Expected `@gqlField` parameter property to be public. Valid modifiers for `@gqlField` parameter properties are  `public` and `readonly`.

Learn more: https://grats.capt.dev/docs/docblock-tags/fields#class-based-fields

7     protected helloProtected: string,
      ~~~~~~~~~
